<resources>

    <!-- Ttiles -->
    <string name="title_cocktails">Cocktails</string>
    <string name="title_create_cocktail">Create cocktail</string>
    <string name="title_settings">Settings</string>
    <string name="title_valves">Valves</string>
    <string name="title_muse" translatable="false">Muse</string>
    <string name="title_help">Help</string>
    <string name="title_about_author">About the author</string>

    <!-- General -->
    <string name="loading">Loading…</string>
    <string name="information">Information</string>
    <string name="activate_nfc">Do you want to activate the NFC?</string>
    <string name="nfc_disabled">NFC is disabled</string>
    <string name="default_only">Default</string>
    <string name="default_separator">,</string>

    <!-- Tutorial -->
    <string name="tutorial_continue">Continue</string>
    <string name="tutorial_welcome">Welcome to the Pestormix application. This is a short tutorial
        to make adjustments to start the application. First you must configure the setting valves
        which product in each one. The number of each valve you can see in the tanks provided in the
        machine. Once you have chosen the products of the four valves, you can proceed to the next
        step of the tutorial.</string>
    <string name="tutorial_all_ready">Congratulation! You have completed the basic configuration to
        operate. From now you can start creating your custom cocktails to order them at any time.
        Good luck!</string>
    <string name="network_first_time">I need network the first time, sorry</string>

    <!-- Cocktail -->
    <string name="option_1">Details</string>
    <string name="option_2">Edit</string>
    <string name="option_3">Remove</string>
    <string name="youre_asking">"You're asking for"</string>
    <string name="quit">Are you sure you want to quit?</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="cocktail_removed">The cocktail will be removed permanently</string>
    <string name="search">Search</string>

    <!-- Cocktail Details -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="drinks">Drinks</string>
    <string name="missing_description">This cocktail doesn\'t have description</string>
    <string name="drinks_detail_separator" translatable="false">\u0020 - \u0020</string>

    <!-- Create cocktail-->
    <string name="how_will_create_cocktail">How will you create the cocktail?</string>
    <string name="manually">Manually</string>
    <string name="qr_code">QR code</string>
    <string name="nfc_tag">NFC tag</string>
    <string name="valid_drinks">You have to say valid drinks</string>
    <string name="speech_not_supported">Speech not supported</string>

    <!-- Manually-->
    <string name="select_drink">Select a drink</string>
    <string name="obligate_add_drink">You have to add some drink</string>
    <string name="no_more_drinks_available">No more drinks available</string>

    <!-- Give Cocktail Name-->
    <string name="give_name">Give a name</string>
    <string name="give_description">Give a description</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="cocktail_description">Cocktail description (Optional)</string>
    <string name="save">Save</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cocktail_removed_restart_creation">The cocktail will be removed and you will have
        to re-start the creation</string>
    <string name="cocktail_not_updated_restart_edition">The cocktail won\'t be edited and you will
        have to re-start the edition</string>
    <string name="cocktail_name_already_exist">A cocktail with this name already exists</string>
    <string name="give_name_mandatory">You have to give a name for it</string>
    <string name="cocktail_format_error">Cocktail\'s format is invalid</string>

    <!-- About the author-->
    <string name="about_me">Albert Eduard Merino Pulido\nEscola Politècnica Superior (UdL)\nFinal
        Project\nCourse 2015–2016</string>

    <!-- Settings -->
    <string name="configure_valves">Configure the valves</string>
    <string name="muse" translatable="false">Muse</string>
    <string name="V1" translatable="false">V1</string>
    <string name="V2" translatable="false">V2</string>
    <string name="V3" translatable="false">V3</string>
    <string name="V4" translatable="false">V4</string>
    <string name="sign_in_google">Sign-in with Google</string>
    <string name="sign_out_google">Sign-out of Google</string>
    <string name="exit_without_saving">Exit without saving?</string>
    <string name="save_completed">Saved completed</string>

    <!-- Preferences-->
    <string name="PREFERENCE_MUSE" translatable="false">preference_muse</string>
    <string name="PREFERENCE_LOGIN" translatable="false">preference_login</string>
    <string name="PREFERENCE_VALVES" translatable="false">preference_valves</string>
    <string name="PREFERENCE_HEROKU" translatable="false">preference_heroku</string>
    <string name="PREFERENCE_LANGUAGE" translatable="false">preference_language</string>
    <string name="glass_name">Glass %d  cl</string>
    <string name="error_login">Error with login</string>

    <!-- Endpoints -->
    <string name="pull_from_remote">Google PullFromRemote by %s</string>
    <string name="push_to_remote">Google PushToRemote by %s</string>
    <string name="heroku_push_to_remote">Heroku PushToRemote by %s</string>
    <string name="heroku_pull_from_remote">Heroku PullFromRemote by %s</string>

    <!-- Muse-->
    <string name="connect">Connect</string>
    <string name="status">Connection Status:</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh">Refresh</string>
    <string name="init_val" translatable="false">0.0</string>
    <string name="eeg" translatable="false">EEG data:</string>
    <string name="accel">Accelerometer Data:</string>
    <string name="version">Version:</string>
    <string name="undefined">unknown</string>
    <string name="pause">Pause/Resume</string>
    <string name="muse_elem">Elements:</string>

</resources>
