<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/tutorial_group"
        android:visible="false">
        <item
            android:id="@+id/continue_button"
            android:icon="@android:drawable/ic_media_next"
            android:title="@string/tutorial_continue"
            app:showAsAction="ifRoom" />
    </group>
    <group
        android:id="@+id/config_valves_group">
        <item
            android:id="@+id/cancel"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/save"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/save"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/cancel"
            app:showAsAction="ifRoom" />

    </group>
</menu>