<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/title_create_cocktail"
            android:textColor="@color/colorText"
            android:textSize="@dimen/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_20"
            android:text="@string/give_name"
            android:textSize="@dimen/title" />

        <EditText
            android:id="@+id/name"
            android:layout_width="@dimen/cocktail_name_edit_text"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_color_rectangle_background"
            android:gravity="center"
            android:hint="@string/cocktail_name"
            android:inputType="textCapSentences"
            android:maxLength="15"
            android:padding="@dimen/padding_10"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_20"
            android:text="@string/give_description"
            android:textSize="@dimen/title" />

        <EditText
            android:id="@+id/description"
            android:layout_width="@dimen/cocktail_description_edit_text"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_color_rectangle_background"
            android:gravity="top"
            android:hint="@string/cocktail_description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="@dimen/cocktail_description_edit_text_height"
            android:padding="@dimen/padding_10" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_20"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:paddingTop="@dimen/padding_20"
        android:weightSum="2">

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>
