<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_default_padding"
    android:paddingRight="@dimen/activity_default_padding"
    android:paddingTop="@dimen/activity_default_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/how_will_create_cocktail"
        android:textSize="@dimen/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/manually_button"
            android:layout_width="@dimen/create_cocktail_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/manually" />

        <Button
            android:id="@+id/qr_button"
            android:layout_width="@dimen/create_cocktail_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/qr_code" />

        <Button
            android:id="@+id/nfc_button"
            android:layout_width="@dimen/create_cocktail_button"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:paddingBottom="@dimen/padding_10"
            android:paddingTop="@dimen/padding_10"
            android:text="@string/nfc_tag" />

    </LinearLayout>

</LinearLayout>