<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85" />

    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@drawable/white_rectangle_background"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/v1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_selector_background"
            android:gravity="center"
            android:text="@string/V1" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/v2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_selector_background"
            android:gravity="center"
            android:text="@string/V2" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/v3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_selector_background"
            android:gravity="center"
            android:text="@string/V3" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/v4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_selector_background"
            android:gravity="center"
            android:text="@string/V4" />
    </LinearLayout>


</LinearLayout>



